--- a/Muse/Web.config
+++ b/Muse/Web.config
@@ -9,7 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Muse-20150304063337.mdf;Initial Catalog=aspnet-Muse-20150304063337;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+      -->
+    <add name="DefaultConnection" connectionString="workstation id=muse-db.mssql.somee.com;packet size=4096;user id=Steve580_SQLLogin_2;pwd=pe6fnezw85;data source=muse-db.mssql.somee.com;persist security info=False;initial catalog=muse-db"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -22,6 +26,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <modules>
@@ -33,6 +38,7 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpErrors errorMode="Detailed" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
