introduced Code First POCO entity management framework and made functional local and on server; add UserTvShow object to store user's selected shows.

--- a/Muse/Muse.csproj
+++ b/Muse/Muse.csproj
@@ -187,9 +187,19 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\MediaBrowserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\Test2Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503052306100_InitialCreate.cs" />
+    <Compile Include="Migrations\201503052306100_InitialCreate.Designer.cs">
+      <DependentUpon>201503052306100_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503052347256_MakePropsRequired.cs" />
+    <Compile Include="Migrations\201503052347256_MakePropsRequired.Designer.cs">
+      <DependentUpon>201503052347256_MakePropsRequired.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\TvShow.cs" />
@@ -206,6 +216,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\somee.pubxml" />
+    <None Include="Properties\PublishProfiles\zmuse - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\zmuse - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -247,6 +259,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\MediaBrowser\Index.cshtml" />
     <Content Include="Views\MediaBrowser\AddTvShow.cshtml" />
+    <Content Include="Views\Test2\Create.cshtml" />
+    <Content Include="Views\Test2\Delete.cshtml" />
+    <Content Include="Views\Test2\Details.cshtml" />
+    <Content Include="Views\Test2\Edit.cshtml" />
+    <Content Include="Views\Test2\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -257,6 +274,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201503052306100_InitialCreate.resx">
+      <DependentUpon>201503052306100_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503052347256_MakePropsRequired.resx">
+      <DependentUpon>201503052347256_MakePropsRequired.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
