--- a/Muse/Muse.csproj
+++ b/Muse/Muse.csproj
@@ -199,9 +199,14 @@
     <Compile Include="Migrations\201503052347256_MakePropsRequired.Designer.cs">
       <DependentUpon>201503052347256_MakePropsRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503060328363_EpsButNo.cs" />
+    <Compile Include="Migrations\201503060328363_EpsButNo.Designer.cs">
+      <DependentUpon>201503060328363_EpsButNo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\TvEpisode.cs" />
     <Compile Include="Models\TvShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -264,6 +269,7 @@
     <Content Include="Views\Test2\Details.cshtml" />
     <Content Include="Views\Test2\Edit.cshtml" />
     <Content Include="Views\Test2\Index.cshtml" />
+    <Content Include="Views\MediaBrowser\TvShowEpisodes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503052347256_MakePropsRequired.resx">
       <DependentUpon>201503052347256_MakePropsRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503060328363_EpsButNo.resx">
+      <DependentUpon>201503060328363_EpsButNo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
